--- a/index.html
+++ b/index.html
@@ -10,5 +10,48 @@
 </head>
 <body>
     <h1>Calculator</h1>
+    <div class="container">
+
+        <div class="row0">
+            <button class="display">0</button>
+        </div>
+
+        <div class="row1">
+            <button class="ac">AC</button>
+            <button class="blank">//</button>
+            <button class="backspace">⌫</button>
+            <button class="divide">÷</button>
+        </div>
+            
+        <div class="row2">
+            <button class="seven">7</button>
+            <button class="eight">8</button>
+            <button class="nine">9</button>
+            <button class="multiply">×</button>
+        </div>
+
+        <div class="row3">
+            <button class="four">4</button>
+            <button class="five">5</button>
+            <button class="six">6</button>
+            <button class="subtract">−</button>
+        </div>
+
+        <div class="row4">
+            <button class="one">1</button>
+            <button class="two">2</button>
+            <button class="three">3</button>
+            <button class="add">+</button>
+        </div>
+
+        <div class="row5">        
+            <button class="zero">0</button>
+            <button class="blank">//</button>
+            <button class="decimal">.</button>
+            <button class="result">=</button>
+        </div>
+
+    </div>
 </body>
 </html>
+
