--- a/index.html
+++ b/index.html
@@ -9,16 +9,19 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Calculator</h1>
     <div class="container">
 
+        <div class="title">
+            <h1>Calculator</h1>
+        </div>
+
         <div class="row0">
-            <button class="display">0</button>
+            <div class="display">0</div>
         </div>
 
         <div class="row1">
             <button class="ac">AC</button>
-            <button class="blank">//</button>
+            <button class="blank"></button>
             <button class="backspace">⌫</button>
             <button class="divide">÷</button>
         </div>
@@ -45,8 +48,8 @@
         </div>
 
         <div class="row5">        
+            <button class="blank"></button>
             <button class="zero">0</button>
-            <button class="blank">//</button>
             <button class="decimal">.</button>
             <button class="result">=</button>
         </div>
