--- a/index.html
+++ b/index.html
@@ -23,33 +23,33 @@
             <button class="ac">AC</button>
             <button class="blank"></button>
             <button class="backspace">⌫</button>
-            <button class="divide">÷</button>
+            <button class="divide operators">÷</button>
         </div>
             
         <div class="row2">
-            <button class="seven">7</button>
-            <button class="eight">8</button>
-            <button class="nine">9</button>
-            <button class="multiply">×</button>
+            <button class="seven numbers">7</button>
+            <button class="eight numbers">8</button>
+            <button class="nine numbers">9</button>
+            <button class="multiply operators">×</button>
         </div>
 
         <div class="row3">
-            <button class="four">4</button>
-            <button class="five">5</button>
-            <button class="six">6</button>
-            <button class="subtract">−</button>
+            <button class="four numbers">4</button>
+            <button class="five numbers">5</button>
+            <button class="six numbers">6</button>
+            <button class="subtract operators">−</button>
         </div>
 
         <div class="row4">
-            <button class="one">1</button>
-            <button class="two">2</button>
-            <button class="three">3</button>
-            <button class="add">+</button>
+            <button class="one numbers">1</button>
+            <button class="two numbers">2</button>
+            <button class="three numbers">3</button>
+            <button class="add operators">+</button>
         </div>
 
         <div class="row5">        
             <button class="blank"></button>
-            <button class="zero">0</button>
+            <button class="zero numbers">0</button>
             <button class="decimal">.</button>
             <button class="result">=</button>
         </div>
