Add results functionality

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <button class="blank"></button>
             <button class="zero numbers">0</button>
             <button class="decimal">.</button>
-            <button class="result">=</button>
+            <button class="result operators">=</button>
         </div>
 
     </div>
