Change layout slightly, add colors

--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
 
         <div class="row1">
             <button class="ac">AC</button>
-            <button class="blank"></button>
-            <button class="backspace">⌫</button>
-            <button class="divide operators">÷</button>
+            <div class="rightofx">
+                <button class="backspace">⌫</button>
+                <button class="divide operators">÷</button>
+            </div>
         </div>
             
         <div class="row2">
@@ -48,10 +49,11 @@
         </div>
 
         <div class="row5">        
-            <button class="blank"></button>
             <button class="zero numbers">0</button>
-            <button class="decimal">.</button>
-            <button class="result operators">=</button>
+            <div class="rightofx">
+                <button class="decimal">.</button>
+                <button class="result operators">=</button>
+            </div>
         </div>
 
     </div>
